Add Gurobi and LibSerialPort.

--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,7 @@
 [deps]
 DAQP = "c47d62df-3981-49c8-9651-128b1cd08617"
+Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
+LibSerialPort = "a05a14c7-6e3b-5ba9-90a2-45558833e1df"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearMPC = "82e1c212-e1a2-49d2-b26a-a31d6968e3bd"
 MatrixEquations = "99c1a7ee-ab34-5fd5-8076-27c950a045f4"
